fix hide scrollbar util for mozila

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,4 +1,5 @@
 %hideScrollbar {
+  scrollbar-width: none;
   &::-webkit-scrollbar {
     width: 0;
     height: 0;
@@ -12,8 +13,8 @@
 %unselectibal {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none; 
-  -moz-user-select: none; 
-  -ms-user-select: none; 
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
